--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "static-web.selectorLabels" . | nindent 4
+    {{- include "static-web.selectorLabels" . | nindent 4 }}
