--- a/values.yaml
+++ b/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: ngin:lt
+  repository: ak11in/nginx-h-london
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
@@ -36,11 +36,14 @@ service:
 
 ingress:
   enabled: true
-  annotations: {}
+  annotations: 
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
+    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
+    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
+
   hosts:
-    - host: chart-example.local
+    - host: check.kapildevkumaria.com
       paths:
         path: /
   tls: []
