--- a/values.yaml
+++ b/values.yaml
@@ -5,7 +5,10 @@
 replicaCount: 1
 
 image:
-  repository: ngin:lt
+  repositoryLondon: ak11in/nginx-h-london
+  repositoryCanada: ak11in/nginx-red-canada
+  repositoryVirginia: ak11in/nginx-blue-nvgn
+  repositoryParis: ak11in/nginx-paris
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
@@ -30,19 +33,37 @@ securityContext: {}
   # runAsNonRoot: true
   # runAsUser: 1000
 
-service:
-  type: ClusterIP
-  port: 80
+londonApi:
+  service:
+    type: ClusterIP
+    port: 8200
+canadaApi:
+  service:
+    type: ClusterIP
+    port: 8300
+virginiaApi:
+  service:
+    type: ClusterIP
+    port: 8400
+parisApi:
+  service:
+    type: ClusterIP
+    port: 8500
 
 ingress:
   enabled: true
+  londonHosts:
+    - london.kapildevkumaria.com
+  canadaHosts:
+    - canada.kapildevkumaria.com
+  virginiaHosts:
+    - virginia.kapildevkumaria.com
+  parisHosts:
+    - paris.kapildevkumaria.com
+   
   annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
-  hosts:
-    - host: chart-example.local
-      paths:
-        path: /
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
