--- a/templates/tests/test-connection.yaml
+++ b/templates/tests/test-connection.yaml
@@ -1,16 +1,16 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: "{{ include "static-web.fullname" . }}-test-connection"
+  name: "{{ include "static-web.fullname" . }}-canada-test-connection"
   labels:
 {{ include "static-web.labels" . | nindent 4 }}
   annotations:
-    "helm.sh/hook": test-success
+    "helm.sh/hook": canada-test-success
 spec:
   containers:
     - name: wget
       image: busybox
       command: ['wget']
-      args:  ['{{ include "static-web.fullname" . }}:{{ .Values.service.port }}']
+      args:  ['{{ include "kapil.canada.fullname" . }}:{{ .Values.londonApi.service.port }}']
   restartPolicy: Never
 
