added all testing yamls

--- a/templates/tests/test-connection-virginia.yaml
+++ b/templates/tests/test-connection-virginia.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: "{{ include "static-web.fullname" . }}-canada-test-connection"
+  name: "{{ include "static-web.fullname" . }}-virginia-test-connection"
   labels:
 {{ include "static-web.labels" . | nindent 4 }}
   annotations:
@@ -11,6 +11,6 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args:  ['{{ include "kapil.canada.fullname" . }}:{{ .Values.londonApi.service.port }}']
+      args:  ['{{ include "kapil.virginia.fullname" . }}:{{ .Values.virginiaApi.service.port }}']
   restartPolicy: Never
 
