--- a/templates/default_deployment.yaml
+++ b/templates/default_deployment.yaml
@@ -1,18 +1,18 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "kapil.london.fullname" . }}
+  name: {{ include "kapil.default.fullname" . }}
   labels:
     {{- include "static-web.labels" . | nindent 4 }}
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-      {{- include "static-web.london.selectorLabels" . | nindent 6 }}
+      {{- include "static-web.default.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       labels:
-        {{- include "static-web.london.selectorLabels" . | nindent 8 }}
+        {{- include "static-web.default.selectorLabels" . | nindent 8 }}
     spec:
     {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
@@ -57,15 +57,15 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "static-web.fullname" . }}-london
+  name: {{ include "static-web.fullname" . }}-default
   labels:
     {{- include "static-web.labels" . | nindent 4 }}
 spec:
-  type: {{ .Values.londonApi.service.type }}
+  type: {{ .Values.defaultApi.service.type }}
   ports:
-   - port: {{ .Values.londonApi.service.port }}
+   - port: {{ .Values.defaultApi.service.port }}
      targetPort: http
      protocol: TCP
      name: http
   selector:
-    {{- include "static-web.london.selectorLabels" . | nindent 4 }}
+    {{- include "static-web.default.selectorLabels" . | nindent 4 }}
