added configmap and modified some manifests yamls

--- a/templates/canada_deployment.yaml
+++ b/templates/canada_deployment.yaml
@@ -31,6 +31,9 @@ spec:
             - name: http
               containerPort: 80
               protocol: TCP
+          volumeMounts:
+          - name: config-volume
+            mountPath: /usr/local/nginx/conf
           livenessProbe:
             httpGet:
               path: /
@@ -41,6 +44,10 @@ spec:
               port: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+      volumes:
+      - name: config-volume
+        configMap:
+          name: nginx-cm
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
