--- a/values.yaml
+++ b/values.yaml
@@ -56,12 +56,14 @@ ingress:
     - canada.kapildevkumaria.com
   virginiaHosts:
     - virginia.kapildevkumaria.com
-  parisHosts:
-    - paris.kapildevkumaria.com
-   
-  annotations: {}
+  defaultHosts:
+    - '*.kapildevkumaria.com'
+  defaultPath: "/(/|$)(.*)"
+  annotations: 
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
+    #nginx.ingress.kubernetes.io/use-regex: "true"
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
