--- a/templates/ingress.yaml
+++ b/templates/ingress.yaml
@@ -3,7 +3,7 @@
 {{- $svcPortDefault := .Values.defaultApi.service.port -}}
 {{- $svcPortCanada := .Values.canadaApi.service.port -}}
 {{- $svcPortVirginia := .Values.virginiaApi.service.port -}}
-{{- $svcPortParis := .Values.parisApi.service.port -}}
+
 
 {{- if semverCompare ">=1.14-0" .Capabilities.KubeVersion.GitVersion -}}
 apiVersion: networking.k8s.io/v1beta1
@@ -32,12 +32,12 @@ spec:
 {{- end }}
 
   rules:
-  {{- if or .Values.ingress.londonHosts .Values.ingress.canadaHosts .Values.ingress.virginiaHosts .Values.ingress.parisHosts }}
+  {{- if or .Values.ingress.canadaHosts .Values.ingress.virginiaHosts .Values.ingress.defaultHosts }}
       {{- range .Values.ingress.canadaHosts }}
       - host: {{ . | quote }}
         http:
           paths:
-          - path: {{ $.Values.ingress.canadaPath }}
+          - path: /
             backend:
               serviceName: {{ template "kapil.canada.fullname" $ }}
               servicePort: {{ $svcPortCanada }}
@@ -46,23 +46,20 @@ spec:
       - host: {{ . | quote }}
         http:
           paths:
-          - path: {{ $.Values.ingress.virginiaPath }}
+          - path: /
             backend:
               serviceName: {{ template "kapil.virginia.fullname" $ }}
               servicePort: {{ $svcPortVirginia }}
       {{- end }}
-      {{- range .Values.ingress.parisHosts }}
+      {{- range .Values.ingress.defaultHosts }}
       - host: {{ . | quote }}
         http:
           paths:
-          - path: {{ $.Values.ingress.parisPath }}
+          - path: /
             backend:
-              serviceName: {{ template "kapil.paris.fullname" $ }}
-              servicePort: {{ $svcPortParis }}
+              serviceName: {{ template "kapil.default.fullname" $ }}
+              servicePort: {{ $svcPortDefault }}
       {{- end }}
-  backend:    
-    serviceName: {{ template "kapil.default.fullname" $ }}
-    servicePort: {{ $svcPortDefault }}
 {{- end }}
 {{- end }}
 
