--- a/values.yaml
+++ b/values.yaml
@@ -50,21 +50,21 @@ virginiaApi:
 ingress:
   enabled: true
   canadaHosts:
-    - canada.kapildevkumaria.com
+    - canada.kapilkumaria.com
   virginiaHosts:
-    - virginia.kapildevkumaria.com
+    - virginia.kapilkumaria.com
   defaultHosts:
-    - '*.kapildevkumaria.com'
+    - '*.kapilkumaria.com'
    
   annotations: 
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
     nginx.ingress.kubernetes.io/rewrite-target: /$2
     #nginx.ingress.kubernetes.io/use-regex: "true"
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
+  tls: 
+    - secretName: example-app-tls
+      hosts:
+        - '*.kapilkumaria.com'
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
